fix overflow issue with long words in a thread

--- a/BookClubFE/src/index.css
+++ b/BookClubFE/src/index.css
@@ -889,3 +889,8 @@ body {
   height: 40px;
   width: 40px;
 }
+
+.threadText {
+  word-break: break-word;
+  white-space: normal;
+}
